Fix bug in market package

--- a/resources/views/admin/_permissions.haml
+++ b/resources/views/admin/_permissions.haml
@@ -1,4 +1,4 @@
--use Facilitador\Models\Admin
+-use Porteiro\Models\Admin
 
 -# Implement this as a collectoin instead, like fetch the collection of permission options
 .form-group.admin-permissions(class=$item&&$item->permissions?null:'closed')
