--- a/resources/views/admin/_permissions.haml
+++ b/resources/views/admin/_permissions.haml
@@ -2,14 +2,14 @@
 
 -# Implement this as a collectoin instead, like fetch the collection of permission options
 .form-group.admin-permissions(class=$item&&$item->permissions?null:'closed')
-	%label.control-label != __('facilitador::admins.permissions')
+	%label.control-label != __('pedreiro::admins.permissions')
 	%div
 
 		.checkbox
 			%label
 				%input(type='hidden' name='_custom_permissions')
 				%input(type='checkbox' name='_custom_permissions' value=1 checked=$item&&$item->permissions)
-				!= __('facilitador::admins.permissions_override')
+				!= __('pedreiro::admins.permissions_override')
 
 		.permissions-list
 			.permissions-list-inner
