--- a/resources/views/account/reset.haml
+++ b/resources/views/account/reset.haml
@@ -11,6 +11,6 @@
 
 	.form-actions
 		%button(type="submit" class="btn btn-primary") Submit
-		%a.btn.btn-default(href=route('porteiro.account@login')) Cancel
+		%a.btn.btn-default(href=route('login')) Cancel
 
 !=Former::close()
