--- a/resources/views/account/forgot.haml
+++ b/resources/views/account/forgot.haml
@@ -1,4 +1,4 @@
-!= View::make('support::shared.form._header', $__data)->render()
+!= View::make('pedreiro::shared.form._header', $__data)->render()
 
 %fieldset
 	.legend Reset
