--- a/resources/views/admin/edit.haml
+++ b/resources/views/admin/edit.haml
@@ -45,11 +45,11 @@
 
 		-# Disable admin
 		-if (!$item->disabled())
-			%a.btn.btn-warning.js-tooltip(title=__('pedreiro::admins.form.disable_tooltip') href=URL::to(SupportURL::relative('disable', $item->id)))
+			%a.btn.btn-warning.js-tooltip(title=__('pedreiro::admins.form.disable_tooltip') href=URL::to(PedreiroURL::relative('disable', $item->id)))
 				%span.glyphicon.glyphicon-ban-circle
 				!= __('pedreiro::admins.form.disable')
 		-else
-			%a.btn.btn-warning.js-tooltip(title=__('pedreiro::admins.form.enable_tooltip') href=URL::to(SupportURL::relative('enable', $item->id)))
+			%a.btn.btn-warning.js-tooltip(title=__('pedreiro::admins.form.enable_tooltip') href=URL::to(PedreiroURL::relative('enable', $item->id)))
 				%span.glyphicon.glyphicon-ban-circle
 				!= __('pedreiro::admins.form.enable')
 	-$actions = ob_get_clean();
